release: sync v1.0.0-beta2 updates
